apps/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: apps
  labels:
    app: vaultwarden
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/instance: vaultwarden
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: apps
    app.kubernetes.io/managed-by: kustomize
spec:
  selector:
    matchLabels:
      app: vaultwarden
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: vaultwarden
        app.kubernetes.io/name: vaultwarden
        app.kubernetes.io/instance: vaultwarden
        app.kubernetes.io/component: web
        app.kubernetes.io/part-of: apps
        app.kubernetes.io/managed-by: kustomize
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: vaultwarden-data
          persistentVolumeClaim:
            claimName: vaultwarden-data-pvc
        - name: vaultwarden-logs
          persistentVolumeClaim:
            claimName: vaultwarden-logs-pvc
      containers:
        - name: vaultwarden-server
          image: vaultwarden/server:1.37.4 # {"$imagepolicy": "flux-system:vaultwarden-image-policy"}
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 80
          volumeMounts:
            - name: vaultwarden-data
              mountPath: /data
            - name: vaultwarden-logs
              mountPath: /var/log/vaultwarden
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
