apps/vaultwarden/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-ingressroute
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`passwords.macbytes.io`)
      kind: Rule
      services:
        - name: vaultwarden-svc
          port: 80
  tls:
    secretName: vaultwarden-tls-certificate
